@@ -5,3 +5,7 @@
 # Bug Fixes
 * Elastic Search Unable to parse and index some messages with previously used keys
 * Elastic Search event data objects containing consecutive periods will be replaced with a single period.
+* Add iRules support to system poller stats
+
+# Bug Fixes
+* Elastic Search Unable to parse and index some messages with previously used keys
